Added all routes to openapi config, implemented pagination
